set(BSP_LINK_TARGETS
  p3bsplib p3networksystem p3postprocess p3leveleditor
)

set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME "BSPDevel")
add_metalib(p3bsp INIT init_libbsp bsp.h COMPONENTS ${BSP_LINK_TARGETS})
unset(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME)

install(TARGETS p3bsp
  EXPORT BSP COMPONENT BSP
  DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/panda3d
  ARCHIVE COMPONENT BSPDevel)
